Fix mozilla scrollbar hide

--- a/src/Styles/Global.scss
+++ b/src/Styles/Global.scss
@@ -4,4 +4,5 @@
     box-sizing: border-box;
     outline: none;
     overflow-x: hidden;
+    scrollbar-width: none;
 }
