--- a/src/Views/Home/styles.module.scss
+++ b/src/Views/Home/styles.module.scss
@@ -579,10 +579,10 @@ $hd: 1400px;
   .container {
     top: 0;
     width: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 
-  ::-webkit-scrollbar {
+  ::-webkit-scrollbar{
     display: none;
   }
 
